[project]
name = "backtab"
version = "0.1.0"
description = ""
authors = [
    {name = "Arno Cornette",email = "ar.cornette@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "beancount (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
