[project]
name = "backtab"
version = "0.1.0"
description = ""
authors = [
    {name = "Arno Cornette",email = "ar.cornette@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (==6.0.3)",
    "click (==8.3.0)",
    "structlog (==25.4.0)",
    "gitpython (==3.1.45)",
    "beancount (==3.2.0)",
    "dataclass-wizard (==0.35.1)",
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "debugpy (>=1.8.17,<2.0.0)"
    ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "debugpy (>=1.8.17,<2.0.0)"
]
